--- a/src/main/resources/templates/hotel/listProvince.html
+++ b/src/main/resources/templates/hotel/listProvince.html
@@ -4,149 +4,40 @@
     <meta charset="UTF-8">
     <title>Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-        /* Remove the navbar's default rounded borders and increase the bottom margin */
-        .navbar {
-            margin-bottom: 20px;
-            border-radius: 0;
-            /*position: fixed;*/
-            /*top: 0;*/
-        }
-
-        .panel panel-primary {
-            height: 400px;
-        }
-
-
-        .container-fluid {
-            height: 75px;
-        }
-
-        .form-inline {
-            margin-top: 13px;
-        }
-
-        /* Remove the jumbotron's default bottom margin */
-        .jumbotron {
-            margin-bottom: 0;
-        }
-
-        /* Add a gray background color and some padding to the footer */
-        footer {
-            height: 50%;
-            background-color: #2b2b2b;
-            padding: 25px;
-        }
-
-        /* food*/
-        .container {
-            padding: 80px 120px;
-        }
-
-        .person {
-            border: 10px solid transparent;
-            margin-bottom: 25px;
-            width: 80%;
-            height: 80%;
-            opacity: 0.7;
-        }
-
-        .person:hover {
-            border-color: #f1f1f1;
-        }
-
-        .carousel-inner {
-            background: #2cecc1b5;
-            margin-top: 5px;
-            height: 600px;
-        }
-
-        .item active {
-            height: 100%;
-        }
-
-        body {
-            background-color: whitesmoke;
-        }
-
-        .img-responsive {
-            width: 100%;
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
+    <style th:replace="/home :: homestyle"></style>
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Home</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li><a href="#">.....</a></li>
-                <li><a href="#">.....</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-white btn-md my-2 my-sm-0 ml-3" type="submit">Search</button>
-                    </form>
-                </li>
-                <li>
-                    <a class="glyphicon glyphicon-user" type="button" data-toggle="dropdown">Đăng Xuất/HOST
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" th:href="@{/logout}"
-                                                   class="glyphicon glyphicon-user"> LOGOUT</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1"
-                                                   th:href="@{/user/edit-user/__${userCurrent.id}__}"
-                                                   class="glyphicon glyphicon-log-in">Tài Khoản</a></li>
-                        <li role="presentation" class="divider"></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" th:href="@{/user/create-hotel}"
-                                                   class="glyphicon glyphicon-user">HOST</a></li>
-
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<div class="row">
-    <article class="col-sm-9">
-        <div class="container">
-            <div class="container">
-                <div class="row">
-                    <th:block th:each="hotel : ${list}">
-                        <div class="col-md-4 col-sm-6 col-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading"><span th:text="${hotel.name}"></span></div>
-                                <div class="panel-body"><a th:href="@{/user/details-hotel/__${hotel.id}__}"><img
-                                        th:src="@{'http://localhost:8080/' + ${hotel.image}}" class="img-responsive"
-                                        alt="Image"></a></div>
-                                <div class="panel-footer"><span th:text="${hotel.description}"></span></div>
-                            </div>
-                        </div>
-                    </th:block>
+<nav th:replace="/home :: nav"></nav>
+<div class="container">
+    <!--    phần các khách sạn-->
+    <div><span><strong>Các khách sạn nổi bật</strong></span></div>
+    <div class="row" th:fragment="listHotel">
+        <th:block th:each="hotel : ${list}">
+            <div class="col-md-4 mt-5 abc">
+                <div class="img">
+                    <a th:href="@{/user/details-hotel/__${hotel.id}__}"><img width="100%"
+                                                                             th:src="@{'http://localhost:8080/' + ${hotel.image}}"
+                                                                             class="img-responsive"
+                                                                             alt="Image"></a>
+                    <div class="content">
+                        <span th:text="${hotel.name}"></span><br>
+                        <span th:text="${hotel.description}"></span><br>
+                    </div>
                 </div>
-                <div class="pagination">
-                    <a th:href="@{'/user/list-hotelProvince/__${province_id}__'(page=${list.number - 1})}" th:if="${list.hasPrevious()}">Previous</a>
-                    <span th:text="${list.number + 1}"></span>/<span th:text="${list.totalPages}"></span>
-                    <a th:href="@{'/user/list-hotelProvince/__${province_id}__'(page=${list.number + 1})}" th:if="${list.hasNext()}">Next</a>
-                </div>
-
             </div>
-        </div>
-    </article>
+        </th:block>
+    </div>
 </div>
 </body>
 </html>
