--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -139,9 +139,12 @@
             <li class="nav-item">
                 <a class="nav-link disabled" th:href="@{logout}">Đăng xuất</a>
             </li>
+            <li class="nav-item" th:if="${message}">
+                <a class="nav-link disabled" th:text="${message}"></a>
+            </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" th:action="@{/search-hotel}" method="post">
+            <input class="form-control mr-sm-2" type="text" name="search-hotel" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
